Get the syntax checker working

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/rtoal/tiger-compiler#readme",
   "devDependencies": {
     "jest": "^24.1.0"
+  },
+  "dependencies": {
+    "ohm-js": "^0.14.0"
   }
 }
