--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,5 +14,7 @@
         "ecmaVersion": 2018
     },
     "rules": {
+        "object-property-newline": "off",
+        "func-names": "off"
     }
 }
