--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest": "^24.1.0"
   },
   "dependencies": {
-    "ohm-js": "^0.14.0"
+    "ohm-js": "^0.14.0",
+    "yargs": "^13.2.2"
   }
 }
