--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A compiler for Andrew Appel's Tiger Language",
   "main": "tiger.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --collect-coverage"
   },
   "repository": {
     "type": "git",
