Use js-beautify instead of pretty-js

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "jest": "^24.1.0"
   },
   "dependencies": {
+    "js-beautify": "^1.10.0",
     "ohm-js": "^0.14.0",
-    "pretty-js": "^0.2.0",
     "yargs": "^13.2.2"
   }
 }
