--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
   },
   "homepage": "https://github.com/rtoal/tiger-compiler#readme",
   "devDependencies": {
-    "eslint": "^5.15.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "jest": "^24.1.0"
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "jest": "^25.1.0"
   },
   "dependencies": {
-    "js-beautify": "^1.10.0",
+    "js-beautify": "^1.10.3",
     "ohm-js": "^0.14.0",
-    "yargs": "^13.2.2"
+    "yargs": "^15.1.0"
   }
 }
