--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,28 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "jest": true,
-        "es6": true
-    },
-    "extends": "airbnb-base",
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "parserOptions": {
-        "ecmaVersion": 2018
-    },
-    "rules": {
-        "object-property-newline": "off",
-        "func-names": "off",
-        "no-console": "off",
-        "object-curly-newline": ["error", {"multiline": true, "minProperties": 5}]
-    }
+  "env": {
+    "commonjs": true,
+    "es6": true,
+    "node": true,
+    "jest": true
+  },
+  "extends": ["plugin:prettier/recommended"],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2018
+  },
+  "rules": {
+    "object-property-newline": "off",
+    "func-names": "off",
+    "no-console": "off",
+    "object-curly-newline": [
+      "error",
+      {
+        "multiline": true,
+        "minProperties": 5
+      }
+    ]
+  }
 }
