--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
-    "jest": "^25.1.0"
+    "jest": "^25.1.0",
+    "prettier": "^1.19.1"
   },
   "dependencies": {
+    "eslint-plugin-prettier": "^3.1.2",
     "js-beautify": "^1.10.3",
     "ohm-js": "^0.14.0",
     "yargs": "^15.1.0"
