Clean up linter config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,15 +14,7 @@
     "ecmaVersion": 2018
   },
   "rules": {
-    "object-property-newline": "off",
     "func-names": "off",
-    "no-console": "off",
-    "object-curly-newline": [
-      "error",
-      {
-        "multiline": true,
-        "minProperties": 5
-      }
-    ]
+    "no-console": "off"
   }
 }
